Archive2/73/9f8a7739e76c38/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:17:16: error: incomplete type 'foo<1, int*>' used in nested name specifier
   std::cout << foo<BOO, int*>::bar() << std::endl;
                ^
